# unicefData

./: .Rbuildignore  .Rhistory  .Rprofile  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DESCRIPTION  DOCUMENTATION_INDEX.md  FULL_DOWNLOAD_TEST_REPORT.md  LICENSE  LICENSE.md  NAMESPACE  NEWS.md  NOT_FOUND_INDICATORS_ANALYSIS.md  PHASE_2_COMPLETE_STATUS_REPORT.md  PHASE_2_TEST_RESULTS.md  PHASE_2_VALIDATION_PROTOCOL.md  PHASE_3_READY.md  PR14_TEST_COVERAGE_SUMMARY.md  PRODUCTION_TEST_REPORT_SEED50.md  PROJECT_COMPLETE_SUMMARY.md  README.md  RELEASE_NOTES_v2.1.0.md  TODO_yaml_metadata.md  cran-comments.md  generate_stata_metadata.do  install_package.R  test_regen_metadata.do  test_stata_metadata.do
python/: .copilot-context.md  .gitignore  CHANGELOG.md  GETTING_STARTED.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  README.md  YAML_UTILIZATION.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
python/examples/: 00_quick_start.py  01_basic_usage.py  01_indicator_discovery.py  02_multiple_indicators.py  02_sdg_indicators.py  03_data_formats.py  03_sdg_indicators.py  04_data_analysis.py  04_metadata_options.py  05_advanced_features.py  06_test_fallback.py  README.md
python/metadata/: _unicefdata_sync_history.yaml  sync_history.yaml
python/scripts/: enrich_indicators_metadata.py  generate_metadata.py  quick_totals_test.py
python/test_output/: run_tests.py
python/tests/: README.md  conftest.py  run_tests.py  test_404_fallback.py  test_deterministic.py  test_dimensions.py  test_direct_metadata.py  test_discovery.py  test_download.py  test_error_conditions.py  test_fallback_fix.py  test_hardcoded_removal_validation.py  test_list_dataflows.py  test_metadata_manager.py  test_pipeline_mocked.py  test_python_integration.py  test_quick_python.py  test_sync_pipeline.py  test_unicef_api.py  (+1 more)
(+3641 files in other folders)
